package edu.fiuba.algo3.entrega;

public interface Opcion {
    public Puntaje puntuar(Respuesta respuesta);

    public boolean equals(Respuesta respuesta);

}
